# impolite

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: greetd.rs  impolite_app.rs  lipgloss-colors.rs  main.rs
src/impolite/: impolite.rs
