[package]
name = "impolite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
crossterm = { version = "0.29.0", features = ["event-stream"] }
facet = { version = "0.43.2", default-features = false }
facet-json = { version = "0.43.2", features = ["tokio"] }
flume = { version = "0.12.0", default-features = false, features = ["async"] }
freedesktop-desktop-entry = "0.8.1"
ratatui = "0.30.0"
tokio = { version = "1.49.0", default-features = false, features = ["io-std", "macros", "net", "rt"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
