[package]
name = "impolite"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
freedesktop-desktop-entry = "0.8.1"
pico-args = "0.5.0"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.22"
tui-input = "0.15.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
