[package]
name = "impolite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
flume = { version = "0.12.0", default-features = false }
freedesktop-desktop-entry = "0.8.1"
mana-tui = { git = "https://github.com/wyvernbw/mana-tui.git", version = "0.0.1", features = ["macros", "nightly"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread", "io-util", "net"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.22"
tui-input = "0.15.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
